Added shuffle button. Padded Card components. Some CSS and stylistic changes.

--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 	</head>
 	<title>Media Morph Beta</title>
 	<body>
-		<h1>Media Morph <span class="orange">Beta</span></h1>
+		<h1>Media Morph <sup><span class="orange">Beta</span></sup></h1>
 		<div class="menu-container">
 			<ul class="top-menu">
 				<li><a href="/">Import</a></li>
